phase2_Dev/src/objects/Historical_Cases_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allegation_Code__c</fullName>
        <label>Allegation Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allegation_Description__c</fullName>
        <label>Allegation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name__c</fullName>
        <label>Case Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the legacy case was successfully processed</description>
        <label>Case Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint_Disposition__c</fullName>
        <label>Complaint Disposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCF_File_Submission_Date__c</fullName>
        <label>DCF File Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCF_File_Submitter__c</fullName>
        <label>DCF File Submitter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Event_Occurred__c</fullName>
        <label>Date Event Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule_1__c</fullName>
        <formula>Intake_ID__c + &apos;|&apos; +  Program_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorText__c</fullName>
        <label>ErrorText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filed_with_DCF__c</fullName>
        <label>Filed with DCF</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_ID__c</fullName>
        <label>Intake ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Method__c</fullName>
        <label>Intake Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_complaint_Description__c</fullName>
        <label>Nature of complaint - Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nature_of_complaint__c</fullName>
        <label>Nature of complaint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Anonymous__c</fullName>
        <label>Reporter Anonymous</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_City__c</fullName>
        <label>Reporter City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Data_Entry__c</fullName>
        <label>Reporter Data Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporter_First_Name__c</fullName>
        <label>Reporter First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Home_Phone__c</fullName>
        <label>Reporter Home Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_ID__c</fullName>
        <label>Reporter ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Last_Name__c</fullName>
        <label>Reporter Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Relationship_To_Provider__c</fullName>
        <label>Reporter Relationship To Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_State__c</fullName>
        <label>Reporter State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Street__c</fullName>
        <label>Reporter Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Work_Phone__c</fullName>
        <label>Reporter Work Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_ZipCode__c</fullName>
        <label>Reporter ZipCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Type_of_case__c</fullName>
        <label>Summary/Type of case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Allegation__c</fullName>
        <label>Summary of Allegation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unlicensed_ID__c</fullName>
        <label>Unlicensed ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Historical Cases Staging</label>
    <listViews>
        <fullName>EECRs_Intake_Data</fullName>
        <columns>Intake_ID__c</columns>
        <columns>Nature_of_complaint__c</columns>
        <columns>Nature_of_complaint_Description__c</columns>
        <columns>Case_Processed__c</columns>
        <columns>Program_ID__c</columns>
        <columns>Allegation_Code__c</columns>
        <columns>Allegation_Description__c</columns>
        <columns>ErrorText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Duplicate_Rule_1__c</field>
            <operation>equals</operation>
            <value>3913|400595</value>
        </filters>
        <label>EECRs Intake Data</label>
    </listViews>
    <nameField>
        <displayFormat>HC-{0000000}</displayFormat>
        <label>Historical Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Cases Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>